force-app/main/default/objects/FatturaInCloud__c/FatturaInCloud__c.object-meta.xml
<CustomObject>
    <label>Fattura In Cloud</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fatture In Cloud</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>