force-app/main/default/objects/FatturaInCloud__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account decodificato a partire dall’ID Cliente</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fatture In Cloud</relationshipLabel>
    <relationshipName>Fatture_In_Cloud</relationshipName>
    <type>Lookup</type>
</CustomField>