force-app/main/default/objects/FatturaInCloud__c/fields/Anno__c.field-meta.xml
<CustomField>
    <fullName>Anno__c</fullName>
    <description>Anno fiscale.</description>
    <label>Anno</label>
    <length>4</length>
    <type>Text</type>
</CustomField>