force-app/main/default/objects/FatturaInCloud__c/fields/Business_Key__c.field-meta.xml
<CustomField>
    <fullName>Business_Key__c</fullName>
    <externalId>true</externalId>
    <label>Business Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>