force-app/main/default/objects/FatturaInCloud__c/fields/DataDocumento__c.field-meta.xml
<CustomField>
    <fullName>DataDocumento__c</fullName>
    <description>Data di emissione del documento.</description>
    <inlineHelpText>Data di emissione del documento.</inlineHelpText>
    <label>Data Documento</label>
    <type>Date</type>
</CustomField>