force-app/main/default/objects/FatturaInCloud__c/fields/Dato_Congruente__c.field-meta.xml
<CustomField>
    <fullName>Dato_Congruente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dato Congruente</label>
    <type>Checkbox</type>
</CustomField>