force-app/main/default/objects/FatturaInCloud__c/fields/Ddt__c.field-meta.xml
<CustomField>
    <fullName>Ddt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica la presenza di un DDT incluso nel documento.</description>
    <inlineHelpText>Indica la presenza di un DDT incluso nel documento.</inlineHelpText>
    <label>Ddt</label>
    <type>Checkbox</type>
</CustomField>