force-app/main/default/objects/FatturaInCloud__c/fields/FtAcc__c.field-meta.xml
<CustomField>
    <fullName>FtAcc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica la presenza di una fattura accompagnatoria inclusa nel documento.</description>
    <inlineHelpText>Indica la presenza di una fattura accompagnatoria inclusa nel documento.</inlineHelpText>
    <label>FtAcc</label>
    <type>Checkbox</type>
</CustomField>