force-app/main/default/objects/FatturaInCloud__c/fields/IdCliente__c.field-meta.xml
<CustomField>
    <fullName>IdCliente__c</fullName>
    <description>Id del cliente su Fatture in Cloud.</description>
    <label>Id Cliente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>