force-app/main/default/objects/FatturaInCloud__c/fields/IdFattura__c.field-meta.xml
<CustomField>
    <fullName>IdFattura__c</fullName>
    <description>Id di Fatture in Cloud.</description>
    <label>Id Fattura</label>
    <length>10</length>
    <type>Text</type>
</CustomField>