force-app/main/default/objects/FatturaInCloud__c/fields/ImportoNetto__c.field-meta.xml
<CustomField>
    <fullName>ImportoNetto__c</fullName>
    <description>Importo netto del documento (competenze).</description>
    <label>Importo Netto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>