force-app/main/default/objects/FatturaInCloud__c/fields/ImportoTotale__c.field-meta.xml
<CustomField>
    <fullName>ImportoTotale__c</fullName>
    <description>Importo lordo del documento (totale da pagare).</description>
    <label>Importo Totale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>