force-app/main/default/objects/FatturaInCloud__c/fields/InvoiceMilestone__c.field-meta.xml
<CustomField>
    <fullName>InvoiceMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup alla fattura collegata.</description>
    <label>Invoice Milestone</label>
    <referenceTo>InvoiceMilestone__c</referenceTo>
    <relationshipLabel>Fatture In Cloud</relationshipLabel>
    <relationshipName>Fatture_In_Cloud</relationshipName>
    <type>Lookup</type>
</CustomField>