force-app/main/default/objects/FatturaInCloud__c/fields/LastFetchTime__c.field-meta.xml
<CustomField>
    <fullName>LastFetchTime__c</fullName>
    <description>Timestamp dell&apos;ultimo aggiornamento via REST API</description>
    <label>Last Fetch Time</label>
    <type>DateTime</type>
</CustomField>