force-app/main/default/objects/FatturaInCloud__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Link al documento in formato PDF</description>
    <inlineHelpText>Link al documento in formato PDF</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>