force-app/main/default/objects/FatturaInCloud__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Nome del cliente.</description>
    <inlineHelpText>Nome del cliente.</inlineHelpText>
    <label>Nome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>