force-app/main/default/objects/FatturaInCloud__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <description>Numero fattura su Fatture in Cloud</description>
    <label>Numero</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>