force-app/main/default/objects/FatturaInCloud__c/fields/oggetto_interno__c.field-meta.xml
<CustomField>
    <fullName>oggetto_interno__c</fullName>
    <description>Oggetto (per organizzazione interna)</description>
    <label>Oggetto Interno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>