force-app/main/default/objects/FatturaInCloud__c/fields/oggetto_visibile__c.field-meta.xml
<CustomField>
    <fullName>oggetto_visibile__c</fullName>
    <description>Oggetto mostrato sul documento.</description>
    <label>Oggetto Visibile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>