force-app/main/default/objects/FatturaInCloud__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fatture In Cloud</relationshipLabel>
    <relationshipName>Fatture_In_Cloud</relationshipName>
    <type>Lookup</type>
</CustomField>