force-app/main/default/objects/FatturaInCloud__c/fields/ProssimaScadenza__c.field-meta.xml
<CustomField>
    <fullName>ProssimaScadenza__c</fullName>
    <description>Indica la scadenza del prossimo pagamento (vale null nel caso in cui tutti i pagamenti siano saldati).Non presente in preventivi e ddt.</description>
    <inlineHelpText>Indica la scadenza del prossimo pagamento (non è popolato se tutti i pagamenti sono saldati).</inlineHelpText>
    <label>Prossima Scadenza</label>
    <type>Date</type>
</CustomField>