force-app/main/default/objects/FatturaInCloud__c/fields/Saldato__c.field-meta.xml
<CustomField>
    <fullName>Saldato__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica i documenti saldati completamente (true) o non saldati/saldati parzialmente (false). Vale solo per fatture, ricevute, note di credito, ordini e pro forma.</description>
    <label>Saldato</label>
    <type>Checkbox</type>
</CustomField>