force-app/main/default/objects/FatturaInCloud__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipologia del documento.</description>
    <inlineHelpText>Tipologia del documento.</inlineHelpText>
    <label>Tipo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>