force-app/main/default/objects/FatturaInCloud__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>