force-app/main/default/objects/FatturaInCloud__c/fields/Valuta__c.field-meta.xml
<CustomField>
    <fullName>Valuta__c</fullName>
    <description>Valuta del documento e degli importi indicati.</description>
    <label>Valuta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>