force-app/main/default/objects/FatturaInCloud__c/fields/ValutaCambio__c.field-meta.xml
<CustomField>
    <fullName>ValutaCambio__c</fullName>
    <description>Tasso di cambio EUR/{valuta}.</description>
    <label>Valuta Cambio</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>