force-app/main/default/objects/FatturaInCloud__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>InvoiceMilestone__c</columns>
    <columns>DataDocumento__c</columns>
    <columns>Business_Key__c</columns>
    <columns>oggetto_interno__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>